二重起動チェックのステップ名を修正し、フォルダ作成処理を削除

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # 二重起動チェックおよび前準備
-      - name: 🛑 Stop service if exists and mkdir folders
+      - name: 🛑 Stop service if exists
         run: |
           ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} <<'EOF'
           if systemctl list-units --full -all | grep -Fq 'logtail.service'; then
@@ -39,7 +39,6 @@ jobs:
           else
               echo "logtail.service not found. Skipping stop."
           fi
-          mkdir -p /opt/logtail
           EOF
 
       - name: 🚀 Deploy to VPS
